# rfscorer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.steering/20260609-evaluate-api-redesign/: design.md  requirements.md  tasklist.md
.steering/20260609-fit-transform-api-redesign/: design.md  requirements.md  tasklist.md
.steering/20260612-time-col-unit-support/: design.md  requirements.md  tasklist.md
.steering/20260613-emp-probability-rename/: design.md  requirements.md  tasklist.md
.steering/20260613-fit-only-split-utility/: design.md  requirements.md  tasklist.md
.steering/20260613-marginal-er-ef-1d/: design.md  requirements.md  tasklist.md
.steering/20260615-model-save-load/: design.md  requirements.md  tasklist.md
.steering/20260618-fit-rolling/: design.md  requirements.md  tasklist.md
.steering/20260628-recency-unit-rename/: design.md  requirements.md  tasklist.md
.steering/20260628-view-recency/: design.md  requirements.md  tasklist.md
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
examples/: README.md  basic_usage.ipynb  tutorial_advanced_day_freq_en.ipynb  tutorial_advanced_day_freq_ja.ipynb  tutorial_advanced_fit_rolling_en.ipynb  tutorial_advanced_fit_rolling_ja.ipynb  tutorial_advanced_int_time_col_en.ipynb  tutorial_advanced_int_time_col_ja.ipynb  tutorial_beginner_en.ipynb  tutorial_beginner_ja.ipynb  tutorial_practical_en.ipynb  tutorial_practical_ja.ipynb
slides/: rfscorer_overview_en.pptx  rfscorer_overview_ja.pptx
src/rfscorer/: __init__.py  _plotting.py  _recency.py  _time_utils.py  optimizer.py  scorer.py  utils.py
tests/: test_optimizer.py  test_recency.py  test_save_load.py  test_scorer.py  test_utils.py
