[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rfscorer"
version = "0.1.0"
description = "Recency-Frequency based recommendation scoring"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "cvxpy",
]

[project.urls]
Repository = "https://github.com/erdos-the-book/rfscorer"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rfscorer"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
