[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rfscorer"
version = "0.1.0"
description = "Recency-Frequency based recommendation scoring"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "cvxpy",
    "numpy>=2.2.6",
    "matplotlib>=3.10.9",
]

[project.urls]
Repository = "https://github.com/erdos-the-book/rfscorer"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.8",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rfscorer"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
