[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rfscorer"
version = "0.2.8"
description = "Recency-Frequency based recommendation scoring"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Jiro Iwanaga", email = "iwanaga@erdos-the-book.com" },
]
keywords = ["recency", "frequency", "recommendation", "scoring", "e-commerce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5",
    "cvxpy>=1.3",
    "numpy>=1.23",
    "matplotlib>=3.5",
]

[project.urls]
Repository = "https://github.com/jiro-iwanaga/rfscorer"

[project.optional-dependencies]
ja = ["japanize-matplotlib"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.8",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rfscorer"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
